2016-08-01 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h: Increase max sensor
	types to 128.

2016-08-01 Thomas Grohmann <thomas.grohmann@atos.net>

	* common/toolcommon/tool-sensor-common.h: Increase max record ids
	to 4096.

2016-07-29 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Support get/set-bmc-services for Intel motherboards.

2016-07-11 Albert Chu <chu11@llnl.gov>

	* Document support of Intel S2600KPR.

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h,
	libfreeipmi/sel/ipmi-sel-string.c: Add code indicating support for
	Intel S2600KPR.

2016-07-11 Albert Chu <chu11@llnl.gov>

	* Untabify all .c, .h, and .pl files for consistency across
	FreeIPMI.

2016-07-05 Holger Liebig <holger.liebig@ts.fujitsu.com>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Update
	Fujitsu Product ID range.

2016-06-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-oem-intel-spec.h: Add
	forgotten OEM macro.

2016-06-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Fix
	invalid completion code values for set session privilege macros.

2016-06-06 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
	Clarify use of --debugfile option.

	* ipmiconsole/: Make --debugfile option available in production
	builds.

2016-06-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-error-util.c (ipmi_completion_code_strerror_r):
	Remove buggy code which explains Master/Read write error from
	ChangeLog on 2015-09-09.

2016-05-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
	Add macro for maximum IANA numbers.
	
	* libfreeipmi/spec/generate-enterprise-numbers-file.sh:
	Automatically update iana .h file with max index.

2016-05-10 Albert Chu <chu11@llnl.gov>

	* bmc-device/: Support --read-fru and --device-id option.

	* libfreeipmi/: Add ipmi_fru_open_device_id_with_buffer function.